# mathcar-can-cntroller

mid_level_controller/: .clang-format  .gitignore  .gitlab-ci.yml  CMakeLists.txt  package.xml
mid_level_controller/add_ons/: dataplotter.cpp
mid_level_controller/add_ons/logging_scripts/: brake_logger.cpp  pedal_logger.cpp  record_data.sh  start_brake_mapper.sh  start_pedal_mapper.sh
mid_level_controller/add_ons/logging_scripts/old/: brake_logger.sh  brake_variations.cpp  control_input_display.cpp  steer_logger.cpp  steer_logger.sh
mid_level_controller/add_ons/matlab/: c_calc_polynomial.m  plotter.m  speed_matcher.m  values_separater.slx  xyplotter.m
mid_level_controller/cfg/: settings_default.cfg  settings_default_encoder.cfg
mid_level_controller/include/can_driver/: can_bus.h  can_receiver.h  can_receiver_vehicle.h  can_struct.h  can_transceiver.h  can_transmitter.h  can_yaml_parser.h  logger.h
mid_level_controller/include/controller/: common_utils.h  look_up_tables.h  mm_controller.h
mid_level_controller/include/interfaces/: interface.h  joy_inputs.h  joy_node.h  joy_struct.h  keyboard_node.h
mid_level_controller/include/interfaces/peripherals/: keyboard.h  redgear.h  sidewinder.h  xbox.h
mid_level_controller/include/mid_level_controller/: config.in
mid_level_controller/launch/: can_receiver_vehicle.launch  controller.launch  teleop_car.launch  transceiver.launch
mid_level_controller/msg/: Callback_Msg.msg  Can_Message.msg  Can_Status_Message.msg
mid_level_controller/readme/: Doxyfile  Driving Commands and status layout V1.0.xlsx  Important_Notes_and_links.txt  Installation.txt  Quick_Checklist.txt  README  Readme.txt  Usage.txt  conventions  dataplotter_usage.docx
mid_level_controller/scripts/: start_script_mlc.sh  start_script_mlc_with_dataplotter.sh  start_script_mlc_with_keyboard.sh
mid_level_controller/setup/: can_real.conf  can_setup.sh  can_virtual.conf  systec_can-V0.9.4.tar.bz2  systec_can-V0.9.5.tar.bz2
mid_level_controller/setup/systec_can/: 0001-systec_can-Add-support-for-linux-v4.8.patch  Makefile  init-dev.sh  readme.txt  systec_can-1103.fw  systec_can-1104.fw  systec_can-1105.fw  systec_can-1121.fw  systec_can-1122.fw  systec_can-1145.fw  systec_can-bl-1103.fw  systec_can-bl-1104.fw  systec_can-bl-1105.fw  systec_can-bl-1121.fw  systec_can-bl-1122.fw  systec_can-bl-1145.fw  systec_can.c
mid_level_controller/src/can_driver/: can_bus.cpp  can_receiver.cpp  can_receiver_vehicle.cpp  can_transceiver.cpp  can_transmitter.cpp  can_yaml_parser.cpp  logger.cpp
mid_level_controller/src/controller/: common_utils.cpp  mm_controller.cpp
mid_level_controller/src/examples/: interface_ros.cpp  interface_sidewinder_ros.cpp  transceiver.cpp  transceiver_ros.cpp
mid_level_controller/src/interfaces/: interface.cpp  joy_node.cpp  keyboard_node.cpp
mid_level_controller/src/interfaces/peripherals/: keyboard.cpp  redgear.cpp  sidewinder.cpp  xbox.cpp
mid_level_controller/src/main/: main.cpp  main_ros.cpp
mid_level_controller/yaml/: control_messages.yaml  messages_structure.yaml  status_messages.yaml
utils/: .gitignore  CMakeLists.txt  package.xml
utils/examples/: CMakeLists.txt  CMakeLists_ros.txt  color_demo.cpp  fs_utils_demo.cpp  gui_demo.cpp  img_gui_demo.cpp  mode_print_demo.cpp  pangolin_test.cpp  params_demo.cpp  pose.txt  sample.layout  str_utils_demo.cpp  textview_demo.cpp  textview_demo.txt  textview_demo_small.txt  tic_toc_demo.cpp  traj_demo.cpp
utils/include/utils/: TicToc.h  boostd.h  check_ret.h  color.hpp  colored_text.h  config.h  config.in  error_code.h  fs_utils.h  function_checker.hpp  miniflags.h  mode_printing.h  mode_printing_legacy.h  params.hpp  params_enum.hpp  stl_utils.h  str_utils.h  tinyxml2.h
utils/include/utils/gui/: common.h  data_plotter_object.hpp  gps_to_utm.h  graph_objects.hpp  gui_handler.hpp  imshow.hpp  matrix_stream_object.hpp  multiview_2d.h  object_xd.hpp  objects_2d.hpp  objects_3d.hpp  radio_button.hpp  textView.hpp  view_graph.hpp  view_node.hpp
utils/include/utils/ros/: output_info.hpp  params_ros.hpp
utils/osm_files/: osm_file_download.py
utils/osm_files/78.3/17/: 17.42.osm
utils/src/: CMakeLists.txt  fs_utils.cpp  miniflags.cpp  mode_printing.cpp  params.cpp  str_utils.cpp  tinyxml2.cpp  utils-config.cmake.in
utils/src/gui/: data_plotter_object.cpp  graph_objects.cpp  gui_handler.cpp  objects_2d.cpp  objects_3d.cpp  radio_button.cpp  textView.cpp  view_graph.cpp  view_node.cpp
utils/srv/: OutputInfo.srv  ParamGet.srv  ParamInfo.srv  ParamSet.srv
